[gd_scene load_steps=16 format=4 uid="uid://bhgetgieutmei"]

[ext_resource type="Script" uid="uid://b1faq7nkveveq" path="res://scenes/level/level.gd" id="1_wcngd"]
[ext_resource type="TileSet" uid="uid://bsrch7xw56pii" path="res://data/map/world.tres" id="3_sytrn"]
[ext_resource type="PackedScene" uid="uid://bwo22nee7dils" path="res://scenes/win_area_2d/win_area_2d.tscn" id="5_pe1ox"]
[ext_resource type="PackedScene" uid="uid://cm6pcukme4mw2" path="res://scenes/billboard/billboard.tscn" id="5_wcngd"]
[ext_resource type="PackedScene" uid="uid://dr0farklgsayx" path="res://scenes/player/player.tscn" id="7_b7m21"]
[ext_resource type="Shader" uid="uid://dsl83rk3ci4aa" path="res://assets/shaders/stars.gdshader" id="8_sytrn"]
[ext_resource type="PackedScene" uid="uid://djs38s3xo5gf0" path="res://components/button_sound.tscn" id="8_tf2q7"]
[ext_resource type="Texture2D" uid="uid://domvpvowqypxy" path="res://assets/kenney_cursor-pixel-pack/Tilemap/tilemap.png" id="8_xv074"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xv074"]
size = Vector2(246, 143)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sytrn"]
resource_local_to_scene = true
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.980392, 0.980392, 0.509804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tf2q7"]
resource_local_to_scene = true
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.980392, 0.980392, 0.509804, 0.639216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xv074"]
resource_local_to_scene = true
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_sytrn"]
atlas = ExtResource("8_xv074")
region = Rect2(153, 170, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_xv074"]
font_size = 24

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tf2q7"]
shader = ExtResource("8_sytrn")
shader_parameter/bg_color = Color(0, 0, 0, 1)
shader_parameter/small_star_prob = 0.996
shader_parameter/small_star_size = 0.5
shader_parameter/small_star_speed = 3.0
shader_parameter/small_star_intensity = 0.8

[node name="Level" type="Node2D"]
script = ExtResource("1_wcngd")
metadata/_edit_lock_ = true

[node name="GravityArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(302, 192)
gravity_space_override = 3
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityArea2D"]
position = Vector2(-185, -129)
shape = SubResource("RectangleShape2D_xv074")
metadata/_edit_lock_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAYACgACAAYAAAAAAAUACgACAAYAAAAAAAQACgACAAYAAAAAAAMACgACAAYAAAAAAAIACgACAAYAAAAAAAEACgACAAYAAAAAAAAACgACAAYAAAABAAAACgACAAUAAQACAAAACgACAAUAAQADAAAACgACAAUAAQAEAAAACgACAAUAAQAFAAAACgACAAUAAQAGAAAACgACAAUAAQAHAAAACgACAAUAAQAIAAAACgACAAUAAQAJAAAACgACAAUAAQAKAAAACgACAAUAAQALAAAACgACAAUAAQAMAAAACgACAAYAAAABAAUACgACAAUAAAACAAUACgACAAUAAAADAAUACgACAAUAAAAEAAUACgACAAUAAAAFAAUACgACAAUAAAAGAAUACgACAAUAAAAHAAUACgACAAYAAAAIAAUACgACAAYAAAAJAAUACgACAAYAAAAKAAUACgACAAYAAAAKAAQACgACAAYAAAAKAAMACgACAAYAAAAKAAIACgACAAUAAAALAAIACgACAAUAAAAIAAIACgACAAUAAAAJAAIACgACAAUAAAAIAAMACgACAAYAAAAJAAMACgACAAYAAAAJAAQACgACAAYAAAALAAMACgACAAYAAAALAAQACgACAAYAAAALAAUACgACAAYAAAABAAYACgACAAYAAAACAAYACgACAAYAAAADAAYACgACAAYAAAAEAAYACgACAAYAAAAFAAYACgACAAYAAAAGAAYACgACAAYAAAAHAAYACgACAAYAAAAIAAYACgACAAYAAAAJAAYACgACAAYAAAAKAAYACgACAAYAAAALAAYACgACAAYAAAAMAAYACgACAAYAAAAMAAUACgACAAYAAAAMAAQACgACAAYAAAAMAAMACgACAAYAAAAMAAIACgACAAYAAAAIAAQACgACAAYAAAAMAAEACgACAAYAAAAHAAQACgACAAUAAAA=")
tile_set = ExtResource("3_sytrn")

[node name="Items" type="Node2D" parent="."]

[node name="WinArea2D" parent="Items" instance=ExtResource("5_pe1ox")]
unique_name_in_owner = true
position = Vector2(180, 28)

[node name="Billboard" parent="Items" instance=ExtResource("5_wcngd")]
unique_name_in_owner = true
position = Vector2(117, 83)

[node name="GravityFlipArea2Ds" type="Node2D" parent="Items"]
unique_name_in_owner = true

[node name="Boxs" type="Node2D" parent="Items"]

[node name="OneWayPlatformers" type="Node2D" parent="Items"]

[node name="Others" type="Node2D" parent="Items"]

[node name="Player" parent="." instance=ExtResource("7_b7m21")]
position = Vector2(115, 46)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(97, 54)
zoom = Vector2(2, 2)
process_callback = 0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="UI"]
custom_minimum_size = Vector2(24, 24)
offset_right = 24.0
offset_bottom = 24.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_sytrn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tf2q7")
theme_override_styles/normal = SubResource("StyleBoxFlat_xv074")
icon = SubResource("AtlasTexture_sytrn")
icon_alignment = 1

[node name="ButtonSound" parent="UI/Button" node_paths=PackedStringArray("button") instance=ExtResource("8_tf2q7")]
button = NodePath("..")

[node name="Label" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -9.5
offset_right = 20.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_xv074")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background" type="CanvasLayer" parent="."]
layer = -128

[node name="ColorRect" type="ColorRect" parent="Background"]
material = SubResource("ShaderMaterial_tf2q7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="UI/Button" to="." method="_on_button_pressed"]
